# yew-bootstrap-icons

./: .cargo-rdme.toml  Cargo.toml  README.md  build.rs
src/: lib.rs
